[package]
name = "message-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = "0.10.0-rc"
async-std = { version = "=1.12.0", features = ["attributes", "unstable"] }
futures = "0.3.15"
clap = {version = "4.5.27", features = ["cargo"]}
log = "0.4"
env_logger = "0.9.0"
drm-fourcc = "2.2"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hdf5 = "0.8.1"

imu-message = { path = "../imu-message" }

[[bin]]
name = "message_recorder"
test = false
bench = false
path = "src/message_recorder.rs"

